# Smart-CCTV-Camera-

./: README.md
CCTV_Bootcamp_3-main/: README.md
CCTV_Bootcamp_3-main/SecurityCamera10/: CMakeLists.txt
CCTV_Bootcamp_3-main/SecurityCamera10/ProtoLib/: CMakeLists.txt  cameraToBackend.proto
CCTV_Bootcamp_3-main/SecurityCamera10/SecurityCamera10/: Backend.cpp  Backend.h  BackendService.cpp  BackendService.h  CMakeLists.txt  CalcAvarage.cpp  CalcAvarage.h  Camera.cpp  Camera.h  CameraClient.cpp  CameraClient.h  Configuration.cpp  Configuration.h  Detection.h  Logger.cpp  Logger.h  SafeQueue.cpp  SafeQueue.h  Sqlite.cpp  Sqlite.h  YOLOdetection.cpp  YOLOdetection.h  program.cpp  program.h  sqlite3.h
CCTV_Bootcamp_3-main/SecurityCamera10/cameraRunner/: CMakeLists.txt  main.cpp
CCTV_Bootcamp_3-main/SecurityCamera10/serverRunner/: CMakeLists.txt  main.cpp
CCTV_Bootcamp_3-main/SecurityCamera10/tests/: CMakeLists.txt  test.cpp
